# math-apk

./: .gitignore  1.txt  BaseConverter.cpp  BaseConverter.h  BaseConverterJNI.kt  CMakeLists.txt  CalcModels.kt  CalcViewModel.kt  CalculatorScreen.kt  MainActivity.kt  README.md  build.gradle.kts  jni_bridge.cpp
.mempalace/palace/: chroma.sqlite3
BaseCalc/: PERF_TUNING_2026-04-09.md  README.md  mempalace.yaml  settings.gradle.kts
BaseCalc/app/: build.gradle.kts  proguard-rules.pro
BaseCalc/app/src/main/: AndroidManifest.xml
BaseCalc/core/: build.gradle.kts  consumer-rules.pro
BaseCalc/gradle/: libs.versions.toml
Claude-Files/: 1_mensagem_freund.txt  2_analise_codigo_atual.md  3_plano_implementacao.md
Claude-Files/4_arquivos_para_melhorar/: lista_arquivos.md
Claude-Files/new_files/: 1.txt  2.txt  CalculatorScreen_patch.kt  ConjuntosScreen.kt
Claude-Files/new_files-2/: CORRECOES_LogicaEngine.kt  CORRECOES_LogicaEngineTest.kt  CORRECOES_LogicaScreen.kt  README.md  logica_patches.kt
Claude-Files/new_files-3/: 1.txt  COMO_INTEGRAR.md  ConjuntoEngine.kt  ConjuntoScreen.kt  ConjuntoViewModel.kt
Claude-Files/projeto_basecalc/: CalcUiState.kt  CalcViewModel.kt  MainActivity.kt
Claude-Files/projeto_basecalc/core/model/: BaseEntry.kt  (+4 more)
Claude-Files/projeto_basecalc/ui/: CalculatorScreen.kt
android-sdk/platform-tools/.installer/: .installData
claude_review/calculo/: BaseCalcEngineImpl.kt  BaseConverter.kt  BaseToDecimalConverter.kt  CalcResult.kt  CalcUiState.kt  CalcViewModel.kt  DigitSymbols.kt  FracStep.kt
claude_review/design/: CalculatorScreen.kt
(+43 files in other folders)
